# SwiftLauncher

./: .gitignore  Cargo.toml  README.md
src/: app.rs  discord.rs  error.rs  icons.rs  main.rs  messages.rs  state.rs  system.rs  theme.rs
src/auth/: avatar.rs  elyby.rs  littleskin.rs  microsoft.rs  mod.rs
src/download/: assets.rs  java.rs  mod.rs
src/instances/: archive.rs  crash.rs  create.rs  install.rs  launch.rs  launch_monitor.rs  mod.rs  mods.rs  screenshots.rs  worlds.rs
src/screens/: home.rs  initialize.rs  instance_detail.rs  loading.rs  login.rs  mod.rs  settings.rs
src/storage/: accounts.rs  mod.rs  settings.rs
