[package]
name = "swift-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "=0.13.1", features = ["advanced", "svg", "tokio", "image", "lazy", "markdown", "highlighter"] }
tokio = { version = "=1.52.0", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
lighty-core = "=26.5.10"
lighty-version = "=26.5.10"
lighty-auth = "=26.5.10"
reqwest = { version = "=0.12.24", default-features = false, features = ["stream", "rustls-tls", "json"] }
sha1 = "=0.11.0"
ring = "=0.17.14"
sled = "=0.34.7"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = "=0.9.10"
image = { version = "=0.25.10", features = ["png", "jpeg"] }
thiserror = "=2.0.18"
anyhow = "=1.0.100"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["fmt", "env-filter"] }
zip = "=6.0.0"
tar = "=0.4.44"
flate2 = "=1.1.9"
rfd = "=0.15.4"
fs2 = "=0.4.3"
